# LocalEats_UserService/api/token/token.go
@@ -1,9 +1,10 @@
 package token
 
 import (
-	"log"
 	"AuthService/config"
 	pb "AuthService/genproto/proto"
+	"fmt"
+	"log"
 	"time"
 
 	jwt "github.com/golang-jwt/jwt"
@@ -56,6 +57,56 @@ func GenerateJWT(user *pb.User) *pb.Token {
 
 	return &pb.Token{
 		AccessToken:  access,
+		RefreshToken: refresh,
+	}
+}
+func ExtractClaims(tokenstr string) (jwt.MapClaims, error) {
+	token, err := jwt.ParseWithClaims(tokenstr, jwt.MapClaims{}, func(t *jwt.Token) (interface{}, error) {
+		if _, ok := t.Method.(*jwt.SigningMethodHMAC); !ok {
+			return nil, fmt.Errorf("unexpected signing method: %v", t.Header["alg"])
+		}
+		return []byte(config.Load().SIGNING_KEY), nil
+	})
+
+	if err != nil {
+		return nil, fmt.Errorf("failed to parse token: %w", err)
+	}
+
+	if !token.Valid {
+		return nil, fmt.Errorf("invalid token")
+	}
+
+	claims, ok := token.Claims.(jwt.MapClaims)
+	if !ok {
+		return nil, fmt.Errorf("invalid token claims")
+	}
+	return claims, nil
+}
+func RefreshToken(token string) *pb.Token {
+	refreshClaim := jwt.New(jwt.SigningMethodHS256)
+	refClaim, err := ExtractClaims(token)
+	if err != nil {
+		log.Fatalf("Error with extracting claims: %s", err)
+	}
+	claims := refreshClaim.Claims.(jwt.MapClaims)
+	claims["user_id"] = refClaim["user_id"]
+	claims["username"] = refClaim["username"]
+	claims["email"] = refClaim["email"]
+	claims["phone_number"] = refClaim["phone_number"]
+	claims["user_type"] = refClaim["user_type"]
+	claims["address"] = refClaim["address"]
+	claims["full_name"] = refClaim["full_name"]
+	claims["years_of_experience"] = refClaim["years_of_experience"]
+	claims["bio"] = refClaim["bio"]
+	claims["specialties"] = refClaim["specialties"]
+	claims["is_verified"] = refClaim["is_verified"]
+	claims["iat"] = time.Now().Unix()
+	claims["exp"] = time.Now().Add(time.Hour * 24).Unix()
+	refresh, err := refreshClaim.SignedString([]byte(config.Load().SIGNING_KEY))
+	if err != nil {
+		log.Fatalf("Error with generating access token: %s", err)
+	}
+	return &pb.Token{
 		RefreshToken: refresh,
 	}
 }
